fix: fix alive position

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         <h3>Users</h3>
 
         <div v-for="user in users" :key="user.id">
-          <div>{{user.name}} ({{user.id}})</div>
+          <div>{{user.name}} ({{user.id}}) {{user.position}}</div>
         </div>
       </div>
 
