--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://pixijs.download/release/pixi.js"></script>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
