--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
     </div>
 
     <script src="https://pixijs.download/release/pixi.js"></script>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="bundle.js"></script>
   </body>
 </html>
