--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,5 @@
 <html>
   <head>
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -8,7 +7,6 @@
       <input type="text" style="position: absolute; top: 0; left: 0" />
     </div>
 
-    <script src="https://pixijs.download/release/pixi.js"></script>
-    <script type="module" src="./index.ts"></script>
+    <script src="./index.ts"></script>
   </body>
 </html>
