fix(server): restore message send

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,11 @@
   <body>
     <div class="wrapper">
       <div id="canvas"></div>
-      <input type="text" style="position: absolute; top: 0; left: 0" />
+      <form id="messageForm" style="position: absolute; top: 0; left: 0">
+        <input id="messageInput" type="text" />
+        <button>Send</button>
+      </form>
+      
     </div>
 
     <script src="./index.ts"></script>
