--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,13 @@
 <html>
   <head>
+    <style>
+      html, body{
+        height: 100%;
+      }
+      body{
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <div class="wrapper">
