dev: Separate server and client projects
workaround for typing problem in pixi.js.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,4 @@
-<html>
-  <head>
+<html><head>
     <style>
       html, body{
         height: 100%;
@@ -13,12 +12,13 @@
     <div class="wrapper">
       <div id="canvas"></div>
       <form id="messageForm" style="position: absolute; top: 0; left: 0">
-        <input id="messageInput" type="text" />
+        <input id="messageInput" type="text">
         <button>Send</button>
       </form>
       
     </div>
 
-    <script type="module" src="/src/main.ts"></script>
-  </body>
-</html>
+    <script src="index.a0a3fd8aa9d3b3f43533ecf862c5c6a8.js"></script>
+  
+
+</body></html>
